@@ -10,16 +10,16 @@ class KestrelProject(info: ProjectInfo) extends StandardServiceProject(info) wit
 {
   val util = "com.twitter" % "util-core" % "1.8.1"
 
-  val ostrich = "com.twitter" % "ostrich" % "4.7.3"
+  val ostrich = "com.twitter" % "ostrich" % "4.9.3"
   val naggati = "com.twitter" % "naggati" % "2.1.1"
 
+  // for tests only
   val specs = "org.scala-tools.testing" % "specs_2.8.1" % "1.6.7" % "test"
   val jmock = "org.jmock" % "jmock" % "2.4.0" % "test"
   val cglib = "cglib" % "cglib" % "2.1_3" % "test"
   val asm = "asm" % "asm" % "1.5.3" % "test"
   val objenesis = "org.objenesis" % "objenesis" % "1.1" % "test"
   val hamcrest = "org.hamcrest" % "hamcrest-all" % "1.1" % "test"
-
 
   // workaround bug in sbt that hides scala-compiler.
   override def filterScalaJars = false
@@ -36,11 +36,24 @@ class KestrelProject(info: ProjectInfo) extends StandardServiceProject(info) wit
       </license>
     </licenses>
 
-  override def releaseBuild = true
+  override def releaseBuild = !(projectVersion.toString contains "SNAPSHOT")
 
   override def subversionRepository = Some("http://svn.local.twitter.com/maven-public")
 
   override lazy val markdownTemplate = Source.fromFile("site/markdown.template").mkString
+
+  // generate a jar that can be run for load tests.
+  def loadTestJarFilename = "kestrel-tests-" + version.toString + ".jar"
+  def loadTestPaths = ((testCompilePath ##) ***) +++ ((mainCompilePath ##) ***)
+  def packageLoadTestsAction =
+    packageTask(loadTestPaths, outputPath, loadTestJarFilename, packageOptions) && task {
+      distPath.asFile.mkdirs()
+      FileUtilities.copyFlat(List(outputPath / loadTestJarFilename), distPath, log).left.toOption
+    }
+  lazy val packageLoadTests = packageLoadTestsAction
+  override def packageDistTask = packageLoadTestsAction && super.packageDistTask
+
+//  override def fork = forkRun(List("-Xmx1024m", "-verbosegc", "-XX:+PrintGCDetails"))
 
   lazy val putMany = task { args =>
     runTask(Some("net.lag.kestrel.load.PutMany"), testClasspath, args).dependsOn(testCompile)
